# stock

./: CMakeLists.txt  README.md  dialog.cpp  dialog.cpp.autosave  dialog.h  dialog.ui  head.h  login.h  login.ui  loginform.cpp  loginform.h  loginform.ui  main.cpp  stock.pro  stock.pro.user.1.3  stock.pro.user.18  stock.pro.user.3.2-pre1
controller/: database.h  draw.cpp  draw.h  productutil.cpp  productutil.h  providerutil.cpp  providerutil.h  purchaseutil.cpp  purchaseutil.h  salecontroller.cpp  salecontroller.h  saleutil.cpp  saleutil.h  util.cpp  util.h
demo/: appinit.h  sliderbar.cpp  sliderbar.h
entity/: employee.cpp  employee.h  product.cpp  product.h  provider.cpp  provider.h  purchase.cpp  purchase.h  sale.cpp  sale.h  user.cpp  user.h
form/: quicreator.ui  quiwidget.cpp  quiwidget.h
other/: font.qrc  pic.qrc  qss.qrc
tab/: form11.cpp  form11.h  form11.ui  form12.cpp  form12.h  form12.ui  form21.cpp  form21.h  form21.ui  form22.cpp  form22.h  form22.ui  form31.cpp  form31.h  form31.ui  form41.cpp  form41.h  form41.ui  form51.cpp  form51.h  form51.ui  form52.cpp  form52.h  form52.ui  form53.cpp  form53.h  form53.ui
